--- a/functional/timbre-cvae/default.ini
+++ b/functional/timbre-cvae/default.ini
@@ -11,7 +11,7 @@ cqt_bit_depth = float64
 [dataset]
 
 datapath = D:\my_workspace\dataset\Electroacoustic-Roads-with-silence
-cqt_dataset = npy_64bit
+cqt_dataset = npy
 workspace = 
 run_number = 0
 
@@ -33,7 +33,7 @@ output_activation = relu
 upsampling = nearest
 
 [training]
-epochs = 500
+epochs = 1
 learning_rate = 0.0001
 batch_size = 64
 buffer_size = 60000
