--- a/functional/timbre-vae/default-cedar.ini
+++ b/functional/timbre-vae/default-cedar.ini
@@ -36,7 +36,7 @@ adam_beta_1 = 0.9
 adam_beta_2 = 0.999
 
 [notes]
-additional_notes = vae is working. Testing a fx dataset
+additional_notes = vae is working. running eroika dataset with different learning rates
 mynotes = 
 
 [extra]
