--- a/functional/timbre-vae/default-cedar3.ini
+++ b/functional/timbre-vae/default-cedar3.ini
@@ -6,16 +6,16 @@ num_octaves = 8
 n_iter = 64
 
 [dataset]
-datapath = /home/ktatar/scratch/datasets/Electroacoustic-Bruno
+datapath = /home/ktatar/scratch/datasets/HaydnKodalySchostakowitsch
 cqt_dataset = npy
 workspace = 
 run_number = 10
 total_frames = 895918
 
 [VAE]
-latent_dim = 32
+latent_dim = 256
 n_units = 2048
-kl_beta = 0.0005
+kl_beta = 0.005
 batch_norm = True
 output_activation = relu
 
@@ -31,10 +31,12 @@ checkpoint_epochs = 15
 save_best_only = True
 learning_schedule = False
 early_patience_epoch = 50
-early_delta = 1e-6
+early_delta = 1e-8
+adam_beta_1 = 0.9
+adam_beta_2 = 0.999
 
 [notes]
-additional_notes = vae is working. Testing longer runs with few latent dimensions
+additional_notes = vae is working. running eroika dataset with different learning rates
 mynotes = 
 
 [extra]
@@ -43,6 +45,6 @@ example_length = 10
 plot_model = False
 
 description = func-timbre-vae-cedar
-start = T
+start = 
 end = 
 time_elapsed = 
