--- a/functional/timbre-vae/default.ini
+++ b/functional/timbre-vae/default.ini
@@ -4,13 +4,13 @@ sample_rate = 44100
 hop_length = 128
 bins_per_octave = 48
 num_octaves = 8
-n_iter = 64
+n_iter = 1
 
 [dataset]
-datapath = D:\my_workspace\dataset\erokia
+datapath = D:\my_workspace\dataset\Electroacoustic-Roads-with-silence
 cqt_dataset = npy
 workspace = 
-run_number = 10
+run_number = 0
 total_frames = 
 
 [VAE]
@@ -21,7 +21,7 @@ batch_norm = True
 output_activation = relu
 
 [training]
-epochs = 5000
+epochs = 1
 learning_rate = 0.0001
 batch_size = 64
 buffer_size = 60000
@@ -33,8 +33,8 @@ save_best_only = True
 learning_schedule = False
 early_patience_epoch = 50
 early_delta = 1e-9
-adam_beta_1 = 0.5
-adam_beta_2 = 0.9
+adam_beta_1 = 0.9
+adam_beta_2 = 0.999
 
 [notes]
 additional_notes = vae is working. Testing a fx dataset
@@ -45,7 +45,7 @@ normalize_examples = False
 example_length = 10
 plot_model = False
 
-description = func-timbre-vae-cedar
+description = func-timbre-vae
 start = T
 end = 
 time_elapsed = 
