--- a/functional/timbre-cvae/default.ini
+++ b/functional/timbre-cvae/default.ini
@@ -6,17 +6,16 @@ num_octaves = 8
 
 #Fast Griffin-Lim - number of iterations
 n_iter = 64
-cqt_bit_depth = float64
 
 [dataset]
 
-datapath = D:\my_workspace\dataset\Electroacoustic-Roads-with-silence
+datapath = D:\dataset\erokia
 cqt_dataset = npy
 workspace = 
 run_number = 0
 
 [CVAE]
-latent_dim = 16
+latent_dim = 8
 
 num_dense_layers = 3
 dense_units = 2048
@@ -28,14 +27,12 @@ kernel_size = 3
 
 kl_beta = 5e-5
 batch_norm = False
-mid_activations = relu
 output_activation = relu
-upsampling = nearest
 
 [training]
-epochs = 1
+epochs = 5000
 learning_rate = 0.0001
-batch_size = 64
+batch_size = 256
 buffer_size = 60000
 buffer_size_dataset = True
 continue_training = False
@@ -46,19 +43,16 @@ save_best_only = True
 learning_schedule = False
 early_patience_epoch = 100
 early_delta = 1e-9
-verbose = 1
-adam_beta_1 = 0.9
-adam_beta_2 = 0.999
 
 [notes]
-additional_notes = testing latent dimension
+additional_notes = testing a working model with longer run now. 
 
 mynotes = testing-example-audio-writting
 
 [extra]
 normalize_examples = False
-example_length = 10
-plot_model = False
+example_length = 15
+plot_model = True
 interpolations_audio_1 = 05 Sculptor.wav
 audio_1_offset = 75
 interpolations_audio_2 = 05 Sculptor.wav
