--- a/functional/timbre-vae/default.ini
+++ b/functional/timbre-vae/default.ini
@@ -7,7 +7,7 @@ num_octaves = 8
 n_iter = 1
 
 [dataset]
-datapath = D:\my_workspace\dataset\Electroacoustic-Roads-with-silence
+datapath = D:\dataset\Electroacoustic-Roads-with-silence
 cqt_dataset = npy
 workspace = 
 run_number = 0
@@ -43,7 +43,7 @@ mynotes =
 [extra]
 normalize_examples = False
 example_length = 10
-plot_model = False
+plot_model = True
 
 description = func-timbre-vae
 start = T
